crates/ars-collections/tests/ui/tab_key_missing_strategy.stderr
error: TabKey requires every variant to have #[tab_key(int = ...)], #[tab_key(str = ...)], or #[tab_key(uuid = ...)] when no enum-level strategy is set
 --> tests/ui/tab_key_missing_strategy.rs:5:5
  |
5 |     Profile,
  |     ^^^^^^^
