crates/ars-collections/tests/ui/tab_key_missing_strategy.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum SettingsTab {
    Profile,
    Billing,
}

fn main() {}
